@@ -1,0 +1,2 @@
+import "./css/basic.css";
+import "./js/process-js-add.js";
