@@ -1,0 +1,5 @@
+module.exports = function(config) {
+  config.entry = {
+    'myapp': './assets/myapp.js'
+  };
+};
