@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Webpack dummy file so tests can run</title></head>
-  <body></body>
+  <head><title>Webpack</title><link href="myapp.dev.css" rel="stylesheet"><script type="text/javascript" src="myapp.dev.js"></script></head>
+  <body>
+    <h1>Webpack output files</h1>
+    <p>This file has all the generated assets in &lt;head></p>
+  </body>
 </html>
